# workspace-browser

./: Cargo.toml  run.sh
src/: event.rs  main.rs  tui.rs  workspace.rs
