[package]
name = "workspace"
version = "0.1.0"
authors = ["Matt Belle <mattbelle17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2"
convert_case = "0.4"
shorthand = "0.1"
termion = "1"
tui = "0.15"
